# mcp-postgres

./: .env.example  .flake8  .gitignore  CHANGELOG.md  README.md  README_ja.md  bandit-report-complete.json  bandit-report-final.json  bandit-report-updated.json  bandit-report.json  blog-post-mcp-sampling-integration.md  pyproject.toml  sep_concern_based_filtering.md  test_connection_sharing.py  test_global_connection.py
.github/workflows/: publish.yml  test.yml
docs/: code-quality-checks-guide.md  concerns_filtering_guide_ja.md  docker-auto-setup-guide.md  linting-and-type-checking-guide.md  performance-monitoring-guide.md  pre-publish-checklist.md  pypi-publishing-guide.md  sampling-elicitation-support.md  simple-setup-guide.md  vscode-tasks-guide.md
docs/PostgreSQLMCPServerDevGuide/: README.md  advanced-features.md  database-connection-implementation.md  deployment-and-release-guide.md  mcp-development-introduction.md  mcp-tools-implementation.md  package-distribution-guide.md  project-structure-guide.md  resources-management.md  testing-and-qa.md
docs/github/: README.md  github-black-formatter-guide.md  github-files-structure.md  (+4 more)
examples/: cline-config-example.json  env-example.env  simple-cline-config.json
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: apply_postgresql_conf.py  cleanup_docker.py  pre_github_update.bat  update_version.py
src/: config.py  database.py  main.py  resources.py
test/: README.md  conftest.py  requirements-test.txt  run_tests.bat  run_tests.sh
(+28 files in other folders)
